Update page UI and logo, add responsiveness

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta description="GitHub Repos Getter Using Promises And Other Stuff">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/svg+xml" href="/site-logo.png" />
         <link rel="stylesheet" href="style.css">
         <title>GitHub Repo</title>
     </head>
     <body>
         <div class="container">
+            <img src="/site-logo2.png" alt="">
             <h1 class="heading">
                 Remember 🍉
             </h1>
